# demo-endpoint

./: LICENSE  README.md
.github/workflows/: fly.yml  test.yml
endpoint/: .gitignore  BACKLOG.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  Rocket.test.toml  Rocket.toml  example_pcf_data.json  fly.toml  tenants.json
endpoint/scripts/: keygen.sh
endpoint/src/: api_types.rs  auth.rs  datamodel.rs  error.rs  lib.rs  main.rs  openid_conf.rs  sample_data.rs
spec/rest-api/: README.md  openapi-1.0.0-beta1.json  openapi-1.0.0-beta2.json  openapi-2.2.0-wip1.json  openapi-2.2.0.json  openapi-2.2.1-wip.json
